--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -34,8 +34,9 @@
            Footer Content 
         </footer>
         <script src="https://cdn.auth0.com/js/lock-7.12.min.js"></script>
+        <script src="https://connect.soundcloud.com/sdk/sdk-3.0.0.js"></script>
         <!-- build:js(assets) scripts/scripts.js -->
-        
+
         <script src="bower_components/jquery/jquery.js"></script>
        
         <script src="scripts/main.js"></script>
