--- a/assets/styles/screen.css
+++ b/assets/styles/screen.css
@@ -12538,5 +12538,583 @@ input[type=password]:focus {
 /**
  * SECTION TITLE
 */
+/* line 36, sass/screen.scss */
+body, html {
+  overflow-x: hidden;
+  font-family: 'Merriweather Sans', sans-serif;
+  background: #f2f2f2;
+  height: 100%;
+}
+
+/* line 42, sass/screen.scss */
+h1 {
+  font-size: 18px;
+  margin-top: 0;
+}
+
+/* line 46, sass/screen.scss */
+h3 {
+  margin-top: 0;
+  font-size: 16px;
+}
+
+/* line 50, sass/screen.scss */
+body {
+  background: #f2f2f2;
+}
+
+/* line 53, sass/screen.scss */
+.container {
+  background: white;
+}
+
+/* line 57, sass/screen.scss */
+.main {
+  padding-top: 60px;
+}
+
+/* line 60, sass/screen.scss */
+#signIn {
+  margin-top: 7px;
+  background: #f50;
+  color: white;
+  border-color: transparent;
+}
+
+/* line 66, sass/screen.scss */
+.navbar-brand {
+  color: white !important;
+  margin-left: 0;
+}
+
+/* line 70, sass/screen.scss */
+.navbar {
+  background: black;
+  border-bottom: 1px solid white;
+  margin: 0;
+  padding: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 9999;
+}
+/* line 79, sass/screen.scss */
+.navbar .container {
+  background: black;
+}
+/* line 82, sass/screen.scss */
+.navbar .btn {
+  margin-top: 10px;
+}
+
+/* line 86, sass/screen.scss */
+.logoText {
+  position: absolute;
+  top: 17px;
+  padding-left: 10px;
+}
+
+/* line 91, sass/screen.scss */
+.sub-nav {
+  padding: 0;
+  margin: 0;
+  margin-top: 30px;
+  float: left;
+  margin-left: 20px;
+}
+/* line 98, sass/screen.scss */
+.sub-nav li {
+  list-style: none;
+  color: black;
+  font-size: 24px;
+  font-weight: 700;
+  float: left;
+  margin-right: 25px;
+}
+/* line 105, sass/screen.scss */
+.sub-nav li.active {
+  color: #f50;
+}
+
+/* line 110, sass/screen.scss */
+.dropdown {
+  float: right;
+  margin-top: 25px;
+}
+
+/* line 114, sass/screen.scss */
+.line {
+  height: 1px;
+  background: #f2f2f2;
+  width: 100%;
+  bottom: 0;
+  padding-left: 20px;
+}
+
+/* line 122, sass/screen.scss */
+.userInfo {
+  margin-top: 20px;
+}
+/* line 126, sass/screen.scss */
+.userInfo .user_avatar img {
+  width: 100%;
+  padding-top: 3px;
+}
+/* line 132, sass/screen.scss */
+.userInfo .welcome {
+  font-size: 16px;
+  font-weight: 700;
+  margin: 0;
+  padding: 0;
+}
+
+/* line 142, sass/screen.scss */
+.anEvent {
+  background: white;
+  padding: 15px;
+  padding-left: 20px;
+  border-bottom: 1px solid #f2f2f2;
+}
+/* line 148, sass/screen.scss */
+.anEvent h1 {
+  font-size: 24px;
+  margin-bottom: 1px;
+  font-weight: 700;
+}
+/* line 153, sass/screen.scss */
+.anEvent h2 {
+  font-size: 14px;
+  margin-top: 3px;
+  padding-top: 0;
+  margin-bottom: 0;
+  padding-bottom: 2px;
+}
+/* line 160, sass/screen.scss */
+.anEvent h3 {
+  margin-top: 0;
+  padding-top: 0;
+  padding-bottom: 1px;
+  margin-bottom: 0;
+}
+/* line 165, sass/screen.scss */
+.anEvent h3.where_venue {
+  font-size: 13px;
+}
+/* line 167, sass/screen.scss */
+.anEvent h3.where_venue a {
+  color: #406E8E;
+}
+/* line 172, sass/screen.scss */
+.anEvent h4 {
+  text-decoration: underline;
+  font-size: 14px;
+  margin: 0 0 5px 0;
+  padding: 0;
+}
+/* line 178, sass/screen.scss */
+.anEvent h1, .anEvent h2, .anEvent h3, .anEvent h4 {
+  -webkit-transition: all .2s ease-in-out;
+  -moz-transition: all .2s ease-in-out;
+  -o-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+}
+/* line 187, sass/screen.scss */
+.anEvent.hideThis {
+  opacity: 0;
+  display: none;
+  -webkit-transition: all 1s ease-in-out;
+  -moz-transition: all 1s ease-in-out;
+  -o-transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out;
+}
+/* line 195, sass/screen.scss */
+.anEvent img {
+  border: 1px solid #ddd;
+  cursor: pointer;
+}
+/* line 199, sass/screen.scss */
+.anEvent .locationText {
+  margin-top: 10px;
+  font-size: 13px;
+  font-weight: 700;
+}
+@media (min-width: 768px) {
+  /* line 199, sass/screen.scss */
+  .anEvent .locationText {
+    margin-top: 15px;
+  }
+}
+/* line 207, sass/screen.scss */
+.anEvent .caption {
+  color: white;
+  font-size: 10px;
+  text-align: center;
+  letter-spacing: 1px;
+  padding: 3px 0 3px 0;
+  line-height: auto;
+  -webkit-transition: bottom .2s ease-in-out;
+  transition: bottom .2s ease-in-out;
+  bottom: -30px;
+  position: absolute;
+  background: #f50;
+  width: 100%;
+  opacity: .9;
+  pointer-events: none;
+}
+/* line 223, sass/screen.scss */
+.anEvent .avatar {
+  -webkit-transition: all .2s ease-in-out;
+  -moz-transition: all .2s ease-in-out;
+  -o-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+  max-width: 27%;
+  padding-right: 0;
+}
+@media (min-width: 768px) {
+  /* line 223, sass/screen.scss */
+  .anEvent .avatar {
+    max-width: none;
+    padding-right: 20px;
+  }
+}
+/* line 234, sass/screen.scss */
+.anEvent .avatar .captionContainer {
+  position: relative;
+  overflow: hidden;
+}
+/* line 238, sass/screen.scss */
+.anEvent .avatar .captionContainer:hover > .caption {
+  bottom: 0;
+  left: 0;
+}
+/* line 244, sass/screen.scss */
+.anEvent .avatar img {
+  width: 100%;
+}
+/* line 249, sass/screen.scss */
+.anEvent .moreInfo {
+  width: 100%;
+  float: left;
+  margin-top: 10px;
+  color: black;
+  display: none;
+}
+/* line 256, sass/screen.scss */
+.anEvent .tickets {
+  margin-top: 0px;
+}
+/* line 258, sass/screen.scss */
+.anEvent .tickets h3 {
+  font-size: 13px;
+  font-weight: 700;
+  margin-top: 0px;
+}
+@media (min-width: 768px) {
+  /* line 258, sass/screen.scss */
+  .anEvent .tickets h3 {
+    margin-top: 5px;
+    font-size: 18px;
+    margin-bottom: 10px;
+  }
+}
+@media (min-width: 992px) {
+  /* line 258, sass/screen.scss */
+  .anEvent .tickets h3 {
+    font-size: 22px;
+  }
+}
+/* line 271, sass/screen.scss */
+.anEvent .tickets .concert_timeing {
+  display: none;
+}
+/* line 274, sass/screen.scss */
+.anEvent .tickets a {
+  right: 15px;
+  bottom: 0;
+}
+/* line 278, sass/screen.scss */
+.anEvent .tickets a .btn {
+  margin-top: 10px;
+  background: #f50;
+  color: white;
+  font-size: 10px;
+  border-color: #fff;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+@media (min-width: 768px) {
+  /* line 278, sass/screen.scss */
+  .anEvent .tickets a .btn {
+    font-size: 12px;
+  }
+}
+@media (min-width: 768px) {
+  /* line 274, sass/screen.scss */
+  .anEvent .tickets a {
+    position: static;
+  }
+}
+/* line 295, sass/screen.scss */
+.anEvent .info {
+  -webkit-transition: all .2s ease-in-out;
+  -moz-transition: all .2s ease-in-out;
+  -o-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+}
+/* line 301, sass/screen.scss */
+.anEvent .who {
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+}
+/* line 307, sass/screen.scss */
+.anEvent .bigList {
+  height: 0;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+  opacity: 0;
+}
+/* line 317, sass/screen.scss */
+.anEvent .big h1 {
+  font-size: 33px;
+}
+/* line 320, sass/screen.scss */
+.anEvent .big h2 {
+  font-size: 18px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+/* line 325, sass/screen.scss */
+.anEvent .big .captionContainer {
+  position: relative;
+  overflow: hidden;
+}
+/* line 329, sass/screen.scss */
+.anEvent .big .captionContainer:hover > .caption {
+  bottom: -30px;
+  left: 0;
+}
+/* line 335, sass/screen.scss */
+.anEvent .big .avatar {
+  width: 33.33333333%;
+}
+/* line 341, sass/screen.scss */
+.anEvent .big .bigList {
+  opacity: 1;
+  height: auto;
+}
+/* line 348, sass/screen.scss */
+.anEvent .big .tickets h3 {
+  margin-top: 8px;
+}
+/* line 352, sass/screen.scss */
+.anEvent .big .bigList {
+  display: block;
+  margin-top: 35px;
+}
+/* line 355, sass/screen.scss */
+.anEvent .big .bigList h4 {
+  font-size: 18px;
+}
+/* line 360, sass/screen.scss */
+.anEvent .type {
+  position: absolute;
+  top: 0;
+  left: -27px;
+  display: none;
+  width: 27px;
+  background: #ff5500;
+  border-bottom: 0px solid #bfbfbf;
+}
+/* line 368, sass/screen.scss */
+.anEvent .type p {
+  color: white;
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  font-size: 12px;
+  right: 0;
+  left: 0;
+  top: 49px;
+  text-transform: uppercase;
+}
+/* line 379, sass/screen.scss */
+.anEvent .type.festival {
+  background: blue;
+  background: #b33c00;
+}
+/* line 384, sass/screen.scss */
+.anEvent .expandedContent {
+  position: relative;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+/* line 388, sass/screen.scss */
+.anEvent .expandedContent h4 {
+  font-size: 20px;
+  font-weight: 700;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 5px;
+}
+
+/* line 397, sass/screen.scss */
+.filters {
+  padding-top: 33px;
+}
+/* line 399, sass/screen.scss */
+.filters h2 {
+  font-size: 16px;
+  margin-top: 0;
+  padding-top: 0;
+}
+
+/* line 405, sass/screen.scss */
+.none {
+  display: none;
+  padding: 100px 0;
+  text-align: center;
+  font-size: 30px;
+}
+
+/* line 413, sass/screen.scss */
+.loading {
+  opacity: 1;
+  transition: opacity .5s ease-in-out;
+  -moz-transition: opacity .5s ease-in-out;
+  -webkit-transition: opacity .5s ease-in-out;
+  background: #ddd;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  z-index: 999;
+  text-align: center;
+}
+/* line 425, sass/screen.scss */
+.loading .loadingCopy {
+  position: absolute;
+  top: 50%;
+  text-align: center;
+  width: 100%;
+  display: none;
+}
+/* line 432, sass/screen.scss */
+.loading .btn {
+  margin: 0 auto;
+  text-align: center;
+  margin-top: 25px;
+  font-size: 30px;
+}
+/* line 438, sass/screen.scss */
+.loading h1 {
+  margin-top: 150px;
+  text-align: center;
+  font-size: 30px;
+}
+
+@-webkit-keyframes arc {
+  0% {
+    border-width: 30px;
+  }
+  25% {
+    border-width: 15px;
+  }
+  50% {
+    -webkit-transform: rotate(27deg);
+    transform: rotate(27deg);
+    border-width: 30px;
+  }
+  75% {
+    border-width: 15px;
+  }
+  100% {
+    border-width: 30px;
+  }
+}
+@keyframes arc {
+  0% {
+    border-width: 30px;
+  }
+  25% {
+    border-width: 15px;
+  }
+  50% {
+    -webkit-transform: rotate(27deg);
+    transform: rotate(27deg);
+    border-width: 30px;
+  }
+  75% {
+    border-width: 15px;
+  }
+  100% {
+    border-width: 30px;
+  }
+}
+/* line 482, sass/screen.scss */
+.green-100 {
+  background-color: #88b257;
+}
+
+/* line 485, sass/screen.scss */
+.green-200 {
+  background-color: #7da84d;
+}
+
+/* line 488, sass/screen.scss */
+.animation-07 {
+  display: none;
+}
+
+/* line 491, sass/screen.scss */
+.cube {
+  position: absolute;
+  bottom: 50%;
+  left: 50%;
+  width: 30px;
+  height: 30px;
+  margin-left: -15px;
+  margin-top: 0;
+}
+
+/* line 500, sass/screen.scss */
+.cube-2d {
+  background-color: white;
+}
+
+/* line 503, sass/screen.scss */
+.arc {
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  margin-left: -70px;
+  width: 140px;
+  height: 70px;
+  overflow: hidden;
+}
+
+/* line 512, sass/screen.scss */
+.arc-cube {
+  position: absolute;
+  bottom: -70px;
+  left: 50%;
+  margin-left: -70px;
+  width: 140px;
+  height: 140px;
+  border-style: solid;
+  border-top-color: transparent;
+  border-right-color: white;
+  border-left-color: transparent;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  box-sizing: border-box;
+  -webkit-animation: arc 2s ease-in-out infinite;
+  animation: arc 2s ease-in-out infinite;
+  -webkit-transform: rotate(-200deg);
+  -ms-transform: rotate(-200deg);
+  transform: rotate(-200deg);
+}
 
 /*# sourceMappingURL=screen.css.map */
