--- a/assets/styles/sass/screen.scss
+++ b/assets/styles/sass/screen.scss
@@ -31,3 +31,501 @@
 @import "ui/buttons";
 @import "ui/footer";
 @import "ui/helpers";
+
+$orange: #f50;
+body, html {
+	overflow-x: hidden;
+	font-family: 'Merriweather Sans', sans-serif;
+	background: #f2f2f2;
+	height: 100%;
+}
+h1 {
+	font-size: 18px;
+	margin-top: 0;
+}
+h3 {
+	margin-top: 0;
+	font-size: 16px;
+}
+body {
+	background: #f2f2f2;
+}
+.container {
+	background: white;
+	//height: 100%;
+}
+.main {
+	padding-top:60px;
+}
+#signIn {
+	margin-top: 7px;
+	background: $orange;
+	color:white;
+	border-color: transparent;
+}
+.navbar-brand {
+	color: white !important;
+	margin-left: 0;
+}
+.navbar {
+	background: black;
+	border-bottom: 1px solid white;
+	margin: 0;
+	padding: 0;
+	position: fixed;
+	top:0;
+	width:100%;
+	z-index:9999;
+	.container {
+		background: black;
+	}
+	.btn {
+		margin-top: 10px;
+	}
+}
+.logoText {
+	position: absolute;
+	top: 17px;
+	padding-left: 10px;
+}
+.sub-nav {
+	padding: 0;
+	margin: 0;
+	margin-top: 30px;
+	float: left;
+	//width: 100%;
+	margin-left: 20px;
+	li {
+		list-style: none;
+		color: black;
+		font-size: 24px;
+		font-weight: 700;
+		float: left;
+		margin-right: 25px;
+		&.active {
+			color: #f50
+		}
+	}
+}
+.dropdown {
+	float: right;
+	margin-top: 25px;
+}
+.line {
+	height: 1px;
+	background: #f2f2f2;
+	width: 100%;
+	bottom: 0;
+	padding-left: 20px;
+}
+
+.userInfo {
+	margin-top: 20px;
+	.user_avatar {
+	
+	img {
+		width:100%;
+		padding-top:3px;
+	}
+
+}
+.welcome {
+		font-size:16px;
+		font-weight: 700;
+		margin: 0;
+		padding: 0;
+	}
+}
+
+
+// event listing
+.anEvent {
+	//margin: 5px 0;
+	background: white;
+	padding: 15px;
+	padding-left: 20px;
+	border-bottom: 1px solid #f2f2f2;
+	h1 {
+		font-size: 24px;
+		margin-bottom: 1px;
+		font-weight: 700;
+	}
+	h2 {
+		font-size: 14px;
+		margin-top: 3px;
+		padding-top: 0;
+		margin-bottom: 0;
+		padding-bottom: 2px;
+	}
+	h3 {
+		margin-top: 0;
+		padding-top: 0;
+		padding-bottom: 1px;
+		margin-bottom: 0;
+		&.where_venue {
+			font-size: 13px;
+			a {
+				color:#406E8E;
+			}
+		}
+	}
+	h4 {
+		text-decoration: underline;
+		font-size: 14px;
+		margin: 0 0 5px 0;
+		padding: 0;
+	}
+	h1, h2, h3, h4 {
+		-webkit-transition: all .2s ease-in-out;
+		-moz-transition: all .2s ease-in-out;
+		-o-transition: all .2s ease-in-out;
+		transition: all .2s ease-in-out;
+	}
+	&:nth-child(odd) {
+		//	background: darken(white, 10%);
+	}
+	&.hideThis {
+		opacity: 0;
+		display: none;
+		-webkit-transition: all 1s ease-in-out;
+		-moz-transition: all 1s ease-in-out;
+		-o-transition: all 1s ease-in-out;
+		transition: all 1s ease-in-out;
+	}
+	img {
+		border: 1px solid #ddd;
+		cursor: pointer;
+	}
+	.locationText {
+		margin-top: 10px;
+		font-size: 13px;
+		font-weight: 700;
+		 @media (min-width:$screen-sm-min) {
+			margin-top: 15px;
+		 }
+	}
+	.caption {
+		color: white;
+		font-size: 10px;
+		text-align: center;
+		letter-spacing: 1px;
+		padding: 3px 0 3px 0;
+		line-height: auto;
+		-webkit-transition: bottom .2s ease-in-out;
+		transition: bottom .2s ease-in-out;
+		bottom: -30px;
+		position: absolute;
+		background: $orange;
+		width: 100%;
+		opacity: .9;
+		pointer-events: none;
+	}
+	.avatar {
+		-webkit-transition: all .2s ease-in-out;
+		-moz-transition: all .2s ease-in-out;
+		-o-transition: all .2s ease-in-out;
+		transition: all .2s ease-in-out;
+		max-width:27%;
+		padding-right:0;
+		@media (min-width:$screen-sm-min) {
+		max-width:none;
+		padding-right:20px;
+		}
+		.captionContainer {
+			position: relative;
+			overflow: hidden;
+			&:hover {
+				>.caption {
+					bottom: 0;
+					left: 0;
+				}
+			}
+		}
+		img {
+			width: 100%;
+		}
+	}
+	
+	.moreInfo {
+		width: 100%;
+		float: left;
+		margin-top: 10px;
+		color: black;
+		display: none;
+	}
+	.tickets {
+		margin-top: 0px;
+		h3 {
+			font-size: 13px;
+			font-weight: 700;
+			margin-top: 0px;
+			 @media (min-width:$screen-sm-min) {
+			margin-top: 5px;
+			font-size: 18px;
+			margin-bottom: 10px;
+			 }
+			 @media (min-width:$screen-md-min) {
+			font-size:22px
+			 }
+		}
+		.concert_timeing {
+			display: none;
+		}
+		a {
+			//position: absolute;
+			right:15px;
+			bottom: 0;
+			.btn {
+		margin-top: 10px;
+		background: $orange;
+		color: white;
+		font-size:10px;
+		border-color: #fff;
+		font-weight: 400;
+		text-transform: uppercase;
+	 @media (min-width:$screen-sm-min) {
+		font-size:12px;
+	 }
+	}
+			  @media (min-width:$screen-sm-min) {
+				position: static;
+			  }
+		}
+	}
+	.info {
+		-webkit-transition: all .2s ease-in-out;
+		-moz-transition: all .2s ease-in-out;
+		-o-transition: all .2s ease-in-out;
+		transition: all .2s ease-in-out;
+	}
+	.who {
+		-webkit-transition: all .3s ease-in-out;
+		-moz-transition: all .3s ease-in-out;
+		-o-transition: all .3s ease-in-out;
+		transition: all .3s ease-in-out;
+	}
+	.bigList {
+		height: 0;
+		
+		-webkit-transition: all .3s ease-in-out;
+		-moz-transition: all .3s ease-in-out;
+		-o-transition: all .3s ease-in-out;
+		transition: all .3s ease-in-out;
+		opacity: 0;
+	}
+	.big {
+		h1 {
+			font-size: 33px;
+		}
+		h2 {
+			font-size: 18px;
+			margin-top: 5px;
+			margin-bottom: 5px;
+		}
+		.captionContainer {
+			position: relative;
+			overflow: hidden;
+			&:hover {
+				>.caption {
+					bottom: -30px;
+					left: 0;
+				}
+			}
+		}
+		.avatar {
+			width: 33.33333333%;
+		}
+		.who {
+			//width: 100%;
+		}
+		.bigList {
+			opacity: 1;
+			height: auto;
+		}
+		
+					
+			.tickets {
+				h3 {
+					margin-top: 8px;
+				}
+			}
+			.bigList {
+				display: block;
+				margin-top: 35px;
+				h4 {
+					font-size: 18px;
+				}
+			}
+		}
+		.type {
+			position: absolute;
+			top: 0;
+			left: -27px;
+			display: none;
+			width: 27px;
+			background: rgb(255, 85, 0);
+			border-bottom: 0px solid darken(white, 25%);
+			p {
+				color: white;
+				position: absolute;
+				margin: 0;
+				padding: 0;
+				font-size: 12px;
+				right: 0;
+				left: 0;
+				top: 49px;
+				text-transform: uppercase;
+			}
+			&.festival {
+				background: blue;
+				background: darken(rgb(255, 85, 0), 15%);
+			}
+		}
+		.expandedContent {
+			position: relative;
+			margin-top: 15px;
+			margin-bottom: 15px;
+			h4 {
+				font-size: 20px;
+				font-weight: 700;
+				padding: 0;
+				margin: 0;
+				margin-bottom: 5px;
+			}
+		}
+	}
+	.filters {
+		padding-top: 33px;
+		h2 {
+			font-size: 16px;
+			margin-top: 0;
+			padding-top: 0;
+		}
+	}
+	.none {
+		display: none;
+		padding: 100px 0;
+		text-align: center;
+		font-size: 30px;
+	}
+	// loading css
+	
+	.loading {
+		opacity: 1;
+		transition: opacity .5s ease-in-out;
+		-moz-transition: opacity .5s ease-in-out;
+		-webkit-transition: opacity .5s ease-in-out;
+		background: #ddd;
+		position: fixed;
+		height: 100%;
+		width: 100%;
+		z-index: 999;
+		text-align: center;
+		//display: none;
+		.loadingCopy {
+			position: absolute;
+			top:50%;
+			text-align: center;
+			width:100%;
+			display: none;
+		}
+		.btn {
+			margin:0 auto;
+			text-align: center;
+			margin-top: 25px;
+			font-size:30px;
+		}
+		h1 {
+			margin-top: 150px;
+			text-align: center;
+			font-size:30px;
+		}
+	}
+	@-webkit-keyframes arc {
+		0% {
+			border-width: 30px;
+		}
+		25% {
+			border-width: 15px;
+		}
+		50% {
+			-webkit-transform: rotate(27deg);
+			transform: rotate(27deg);
+			border-width: 30px;
+		}
+		75% {
+			border-width: 15px;
+		}
+		100% {
+			border-width: 30px;
+		}
+	}
+	@keyframes arc {
+		0% {
+			border-width: 30px;
+		}
+		25% {
+			border-width: 15px;
+		}
+		50% {
+			-webkit-transform: rotate(27deg);
+			transform: rotate(27deg);
+			border-width: 30px;
+		}
+		75% {
+			border-width: 15px;
+		}
+		100% {
+			border-width: 30px;
+		}
+	}
+	.green-100 {
+		background-color: #88b257;
+	}
+	.green-200 {
+		background-color: #7da84d;
+	}
+	.animation-07 {
+		display: none;
+	}
+	.cube {
+		position: absolute;
+		bottom: 50%;
+		left: 50%;
+		width: 30px;
+		height: 30px;
+		margin-left: -15px;
+		margin-top: 0;
+	}
+	.cube-2d {
+		background-color: white;
+	}
+	.arc {
+		position: absolute;
+		top: 30%;
+		left: 50%;
+		margin-left: -70px;
+		width: 140px;
+		height: 70px;
+		overflow: hidden;
+	}
+	.arc-cube {
+		position: absolute;
+		bottom: -70px;
+		left: 50%;
+		margin-left: -70px;
+		width: 140px;
+		height: 140px;
+		border-style: solid;
+		border-top-color: transparent;
+		border-right-color: white;
+		border-left-color: transparent;
+		border-bottom-color: transparent;
+		border-radius: 50%;
+		box-sizing: border-box;
+		-webkit-animation: arc 2s ease-in-out infinite;
+		animation: arc 2s ease-in-out infinite;
+		-webkit-transform: rotate(-200deg);
+		-ms-transform: rotate(-200deg);
+		transform: rotate(-200deg);
+	}
