--- a/assets/styles/sass/screen.scss
+++ b/assets/styles/sass/screen.scss
@@ -38,6 +38,7 @@ body, html {
 	font-family: 'Merriweather Sans', sans-serif;
 	background: #f2f2f2;
 	height: 100%;
+
 }
 h1 {
 	font-size: 18px;
@@ -49,6 +50,7 @@ h3 {
 }
 body {
 	background: #f2f2f2;
+	padding-top: 52px;
 }
 .container {
 	background: white;
@@ -120,7 +122,8 @@ body {
 }
 
 .userInfo {
-	margin-top: 20px;
+	padding-top: 5px;
+	padding-bottom: 5px;
 	.user_avatar {
 	
 	img {
@@ -132,8 +135,10 @@ body {
 .welcome {
 		font-size:16px;
 		font-weight: 700;
+		padding-top: 10px;
 		margin: 0;
 		padding: 0;
+		color: white;
 	}
 }
 
