--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -39,9 +39,14 @@
                         
                         
                         <button id="btn-login" class="btn btn-default btn-login">Login</button>
+                        
                         <button id="signOut" class="btn btn-default">Sign Out</button>
                         <div id="nick"></id>
                         </li>
+                        <li><div class="userInfo">
+                            <div class="col-md-4"><div class="user_avatar"><img src="" alt=""></div></div>
+                            <div class="col-md-8" style="padding-left:0;"><div class="welcome"></div></div>
+                        </div></li>
                     </ul>
                     </div><!-- /.navbar-collapse -->
                     </div><!-- /.container-fluid -->
@@ -59,8 +64,8 @@
                         </div>
                     </div>
                     <div class="loadingCopy">
-    <p>Building list</p>
-</div>
+                        <p>Building list</p>
+                    </div>
                     
                 </div>
                 {{{ body }}}
