--- a/assets/styles/sass/ui/_footer.scss
+++ b/assets/styles/sass/ui/_footer.scss
@@ -6,7 +6,20 @@
 */
 
 
-
+footer {
+	background:black;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	.container {
+		background:black;
+	}
+	p {
+		color: white;
+	}
+	.songkick {
+		height: 25px;
+	}
+}
 
 
 /*------------------------------------*\
