--- a/assets/styles/screen.css
+++ b/assets/styles/screen.css
@@ -12529,6 +12529,25 @@ input[type=password]:focus {
 /**
  * FOOTER
 */
+/* line 9, sass/ui/_footer.scss */
+footer {
+  background: black;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+/* line 13, sass/ui/_footer.scss */
+footer .container {
+  background: black;
+}
+/* line 16, sass/ui/_footer.scss */
+footer p {
+  color: white;
+}
+/* line 19, sass/ui/_footer.scss */
+footer .songkick {
+  height: 25px;
+}
+
 /*------------------------------------*\
     $FOOTER
 \*------------------------------------*/
@@ -12657,35 +12676,41 @@ body {
   padding-top: 5px;
   padding-bottom: 5px;
 }
-/* line 129, sass/screen.scss */
+/* line 127, sass/screen.scss */
+.userInfo .user_avatar {
+  float: left;
+  width: 35px;
+}
+/* line 130, sass/screen.scss */
 .userInfo .user_avatar img {
   width: 100%;
-  padding-top: 3px;
+  padding-top: 5px;
 }
-/* line 135, sass/screen.scss */
+/* line 136, sass/screen.scss */
 .userInfo .welcome {
   font-size: 16px;
   font-weight: 700;
-  padding-top: 10px;
-  margin: 0;
-  padding: 0;
+  margin-top: 10px;
+  margin-right: 20px;
+  display: inline-block;
+  float: left;
   color: white;
 }
 
-/* line 147, sass/screen.scss */
+/* line 149, sass/screen.scss */
 .anEvent {
   background: white;
   padding: 15px;
   padding-left: 20px;
   border-bottom: 1px solid #f2f2f2;
 }
-/* line 153, sass/screen.scss */
+/* line 155, sass/screen.scss */
 .anEvent h1 {
   font-size: 24px;
   margin-bottom: 1px;
   font-weight: 700;
 }
-/* line 158, sass/screen.scss */
+/* line 160, sass/screen.scss */
 .anEvent h2 {
   font-size: 14px;
   margin-top: 3px;
@@ -12693,36 +12718,36 @@ body {
   margin-bottom: 0;
   padding-bottom: 2px;
 }
-/* line 165, sass/screen.scss */
+/* line 167, sass/screen.scss */
 .anEvent h3 {
   margin-top: 0;
   padding-top: 0;
   padding-bottom: 1px;
   margin-bottom: 0;
 }
-/* line 170, sass/screen.scss */
+/* line 172, sass/screen.scss */
 .anEvent h3.where_venue {
   font-size: 13px;
 }
-/* line 172, sass/screen.scss */
+/* line 174, sass/screen.scss */
 .anEvent h3.where_venue a {
   color: #406E8E;
 }
-/* line 177, sass/screen.scss */
+/* line 179, sass/screen.scss */
 .anEvent h4 {
   text-decoration: underline;
   font-size: 14px;
   margin: 0 0 5px 0;
   padding: 0;
 }
-/* line 183, sass/screen.scss */
+/* line 185, sass/screen.scss */
 .anEvent h1, .anEvent h2, .anEvent h3, .anEvent h4 {
   -webkit-transition: all .2s ease-in-out;
   -moz-transition: all .2s ease-in-out;
   -o-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
 }
-/* line 192, sass/screen.scss */
+/* line 194, sass/screen.scss */
 .anEvent.hideThis {
   opacity: 0;
   display: none;
@@ -12731,24 +12756,24 @@ body {
   -o-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
 }
-/* line 200, sass/screen.scss */
+/* line 202, sass/screen.scss */
 .anEvent img {
   border: 1px solid #ddd;
   cursor: pointer;
 }
-/* line 204, sass/screen.scss */
+/* line 206, sass/screen.scss */
 .anEvent .locationText {
   margin-top: 10px;
   font-size: 13px;
   font-weight: 700;
 }
 @media (min-width: 768px) {
-  /* line 204, sass/screen.scss */
+  /* line 206, sass/screen.scss */
   .anEvent .locationText {
     margin-top: 15px;
   }
 }
-/* line 212, sass/screen.scss */
+/* line 214, sass/screen.scss */
 .anEvent .caption {
   color: white;
   font-size: 10px;
@@ -12765,7 +12790,7 @@ body {
   opacity: .9;
   pointer-events: none;
 }
-/* line 228, sass/screen.scss */
+/* line 230, sass/screen.scss */
 .anEvent .avatar {
   -webkit-transition: all .2s ease-in-out;
   -moz-transition: all .2s ease-in-out;
@@ -12775,27 +12800,27 @@ body {
   padding-right: 0;
 }
 @media (min-width: 768px) {
-  /* line 228, sass/screen.scss */
+  /* line 230, sass/screen.scss */
   .anEvent .avatar {
     max-width: none;
     padding-right: 20px;
   }
 }
-/* line 239, sass/screen.scss */
+/* line 241, sass/screen.scss */
 .anEvent .avatar .captionContainer {
   position: relative;
   overflow: hidden;
 }
-/* line 243, sass/screen.scss */
+/* line 245, sass/screen.scss */
 .anEvent .avatar .captionContainer:hover > .caption {
   bottom: 0;
   left: 0;
 }
-/* line 249, sass/screen.scss */
+/* line 251, sass/screen.scss */
 .anEvent .avatar img {
   width: 100%;
 }
-/* line 254, sass/screen.scss */
+/* line 256, sass/screen.scss */
 .anEvent .moreInfo {
   width: 100%;
   float: left;
@@ -12803,18 +12828,18 @@ body {
   color: black;
   display: none;
 }
-/* line 261, sass/screen.scss */
+/* line 263, sass/screen.scss */
 .anEvent .tickets {
   margin-top: 0px;
 }
-/* line 263, sass/screen.scss */
+/* line 265, sass/screen.scss */
 .anEvent .tickets h3 {
   font-size: 13px;
   font-weight: 700;
   margin-top: 0px;
 }
 @media (min-width: 768px) {
-  /* line 263, sass/screen.scss */
+  /* line 265, sass/screen.scss */
   .anEvent .tickets h3 {
     margin-top: 5px;
     font-size: 18px;
@@ -12822,21 +12847,21 @@ body {
   }
 }
 @media (min-width: 992px) {
-  /* line 263, sass/screen.scss */
+  /* line 265, sass/screen.scss */
   .anEvent .tickets h3 {
     font-size: 22px;
   }
 }
-/* line 276, sass/screen.scss */
+/* line 278, sass/screen.scss */
 .anEvent .tickets .concert_timeing {
   display: none;
 }
-/* line 279, sass/screen.scss */
+/* line 281, sass/screen.scss */
 .anEvent .tickets a {
   right: 15px;
   bottom: 0;
 }
-/* line 283, sass/screen.scss */
+/* line 285, sass/screen.scss */
 .anEvent .tickets a .btn {
   margin-top: 10px;
   background: #f50;
@@ -12847,32 +12872,32 @@ body {
   text-transform: uppercase;
 }
 @media (min-width: 768px) {
-  /* line 283, sass/screen.scss */
+  /* line 285, sass/screen.scss */
   .anEvent .tickets a .btn {
     font-size: 12px;
   }
 }
 @media (min-width: 768px) {
-  /* line 279, sass/screen.scss */
+  /* line 281, sass/screen.scss */
   .anEvent .tickets a {
     position: static;
   }
 }
-/* line 300, sass/screen.scss */
+/* line 302, sass/screen.scss */
 .anEvent .info {
   -webkit-transition: all .2s ease-in-out;
   -moz-transition: all .2s ease-in-out;
   -o-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
 }
-/* line 306, sass/screen.scss */
+/* line 308, sass/screen.scss */
 .anEvent .who {
   -webkit-transition: all .3s ease-in-out;
   -moz-transition: all .3s ease-in-out;
   -o-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
 }
-/* line 312, sass/screen.scss */
+/* line 314, sass/screen.scss */
 .anEvent .bigList {
   height: 0;
   -webkit-transition: all .3s ease-in-out;
@@ -12881,49 +12906,49 @@ body {
   transition: all .3s ease-in-out;
   opacity: 0;
 }
-/* line 322, sass/screen.scss */
+/* line 324, sass/screen.scss */
 .anEvent .big h1 {
   font-size: 33px;
 }
-/* line 325, sass/screen.scss */
+/* line 327, sass/screen.scss */
 .anEvent .big h2 {
   font-size: 18px;
   margin-top: 5px;
   margin-bottom: 5px;
 }
-/* line 330, sass/screen.scss */
+/* line 332, sass/screen.scss */
 .anEvent .big .captionContainer {
   position: relative;
   overflow: hidden;
 }
-/* line 334, sass/screen.scss */
+/* line 336, sass/screen.scss */
 .anEvent .big .captionContainer:hover > .caption {
   bottom: -30px;
   left: 0;
 }
-/* line 340, sass/screen.scss */
+/* line 342, sass/screen.scss */
 .anEvent .big .avatar {
   width: 33.33333333%;
 }
-/* line 346, sass/screen.scss */
+/* line 348, sass/screen.scss */
 .anEvent .big .bigList {
   opacity: 1;
   height: auto;
 }
-/* line 353, sass/screen.scss */
+/* line 355, sass/screen.scss */
 .anEvent .big .tickets h3 {
   margin-top: 8px;
 }
-/* line 357, sass/screen.scss */
+/* line 359, sass/screen.scss */
 .anEvent .big .bigList {
   display: block;
   margin-top: 35px;
 }
-/* line 360, sass/screen.scss */
+/* line 362, sass/screen.scss */
 .anEvent .big .bigList h4 {
   font-size: 18px;
 }
-/* line 365, sass/screen.scss */
+/* line 367, sass/screen.scss */
 .anEvent .type {
   position: absolute;
   top: 0;
@@ -12933,7 +12958,7 @@ body {
   background: #ff5500;
   border-bottom: 0px solid #bfbfbf;
 }
-/* line 373, sass/screen.scss */
+/* line 375, sass/screen.scss */
 .anEvent .type p {
   color: white;
   position: absolute;
@@ -12945,18 +12970,18 @@ body {
   top: 49px;
   text-transform: uppercase;
 }
-/* line 384, sass/screen.scss */
+/* line 386, sass/screen.scss */
 .anEvent .type.festival {
   background: blue;
   background: #b33c00;
 }
-/* line 389, sass/screen.scss */
+/* line 391, sass/screen.scss */
 .anEvent .expandedContent {
   position: relative;
   margin-top: 15px;
   margin-bottom: 15px;
 }
-/* line 393, sass/screen.scss */
+/* line 395, sass/screen.scss */
 .anEvent .expandedContent h4 {
   font-size: 20px;
   font-weight: 700;
@@ -12965,18 +12990,18 @@ body {
   margin-bottom: 5px;
 }
 
-/* line 402, sass/screen.scss */
+/* line 404, sass/screen.scss */
 .filters {
   padding-top: 33px;
 }
-/* line 404, sass/screen.scss */
+/* line 406, sass/screen.scss */
 .filters h2 {
   font-size: 16px;
   margin-top: 0;
   padding-top: 0;
 }
 
-/* line 410, sass/screen.scss */
+/* line 412, sass/screen.scss */
 .none {
   display: none;
   padding: 100px 0;
@@ -12984,7 +13009,7 @@ body {
   font-size: 30px;
 }
 
-/* line 418, sass/screen.scss */
+/* line 420, sass/screen.scss */
 .loading {
   opacity: 1;
   transition: opacity .5s ease-in-out;
@@ -12997,7 +13022,7 @@ body {
   z-index: 999;
   text-align: center;
 }
-/* line 430, sass/screen.scss */
+/* line 432, sass/screen.scss */
 .loading .loadingCopy {
   position: absolute;
   top: 50%;
@@ -13005,14 +13030,14 @@ body {
   width: 100%;
   display: none;
 }
-/* line 437, sass/screen.scss */
+/* line 439, sass/screen.scss */
 .loading .btn {
   margin: 0 auto;
   text-align: center;
   margin-top: 25px;
   font-size: 30px;
 }
-/* line 443, sass/screen.scss */
+/* line 445, sass/screen.scss */
 .loading h1 {
   margin-top: 150px;
   text-align: center;
@@ -13057,22 +13082,22 @@ body {
     border-width: 30px;
   }
 }
-/* line 487, sass/screen.scss */
+/* line 489, sass/screen.scss */
 .green-100 {
   background-color: #88b257;
 }
 
-/* line 490, sass/screen.scss */
+/* line 492, sass/screen.scss */
 .green-200 {
   background-color: #7da84d;
 }
 
-/* line 493, sass/screen.scss */
-.animation-07 {
+/* line 495, sass/screen.scss */
+.animation {
   display: none;
 }
 
-/* line 496, sass/screen.scss */
+/* line 498, sass/screen.scss */
 .cube {
   position: absolute;
   bottom: 50%;
@@ -13083,12 +13108,12 @@ body {
   margin-top: 0;
 }
 
-/* line 505, sass/screen.scss */
+/* line 507, sass/screen.scss */
 .cube-2d {
   background-color: white;
 }
 
-/* line 508, sass/screen.scss */
+/* line 510, sass/screen.scss */
 .arc {
   position: absolute;
   top: 30%;
@@ -13099,7 +13124,7 @@ body {
   overflow: hidden;
 }
 
-/* line 517, sass/screen.scss */
+/* line 519, sass/screen.scss */
 .arc-cube {
   position: absolute;
   bottom: -70px;
