Sign out button now clears local storage

--- a/assets/styles/screen.css
+++ b/assets/styles/screen.css
@@ -12692,25 +12692,26 @@ body {
   font-weight: 700;
   margin-top: 10px;
   margin-right: 20px;
+  margin-left: 10px;
   display: inline-block;
   float: left;
   color: white;
 }
 
-/* line 149, sass/screen.scss */
+/* line 150, sass/screen.scss */
 .anEvent {
   background: white;
   padding: 15px;
   padding-left: 20px;
   border-bottom: 1px solid #f2f2f2;
 }
-/* line 155, sass/screen.scss */
+/* line 156, sass/screen.scss */
 .anEvent h1 {
   font-size: 24px;
   margin-bottom: 1px;
   font-weight: 700;
 }
-/* line 160, sass/screen.scss */
+/* line 161, sass/screen.scss */
 .anEvent h2 {
   font-size: 14px;
   margin-top: 3px;
@@ -12718,36 +12719,36 @@ body {
   margin-bottom: 0;
   padding-bottom: 2px;
 }
-/* line 167, sass/screen.scss */
+/* line 168, sass/screen.scss */
 .anEvent h3 {
   margin-top: 0;
   padding-top: 0;
   padding-bottom: 1px;
   margin-bottom: 0;
 }
-/* line 172, sass/screen.scss */
+/* line 173, sass/screen.scss */
 .anEvent h3.where_venue {
   font-size: 13px;
 }
-/* line 174, sass/screen.scss */
+/* line 175, sass/screen.scss */
 .anEvent h3.where_venue a {
   color: #406E8E;
 }
-/* line 179, sass/screen.scss */
+/* line 180, sass/screen.scss */
 .anEvent h4 {
   text-decoration: underline;
   font-size: 14px;
   margin: 0 0 5px 0;
   padding: 0;
 }
-/* line 185, sass/screen.scss */
+/* line 186, sass/screen.scss */
 .anEvent h1, .anEvent h2, .anEvent h3, .anEvent h4 {
   -webkit-transition: all .2s ease-in-out;
   -moz-transition: all .2s ease-in-out;
   -o-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
 }
-/* line 194, sass/screen.scss */
+/* line 195, sass/screen.scss */
 .anEvent.hideThis {
   opacity: 0;
   display: none;
@@ -12756,24 +12757,24 @@ body {
   -o-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
 }
-/* line 202, sass/screen.scss */
+/* line 203, sass/screen.scss */
 .anEvent img {
   border: 1px solid #ddd;
   cursor: pointer;
 }
-/* line 206, sass/screen.scss */
+/* line 207, sass/screen.scss */
 .anEvent .locationText {
   margin-top: 10px;
   font-size: 13px;
   font-weight: 700;
 }
 @media (min-width: 768px) {
-  /* line 206, sass/screen.scss */
+  /* line 207, sass/screen.scss */
   .anEvent .locationText {
     margin-top: 15px;
   }
 }
-/* line 214, sass/screen.scss */
+/* line 215, sass/screen.scss */
 .anEvent .caption {
   color: white;
   font-size: 10px;
@@ -12790,7 +12791,7 @@ body {
   opacity: .9;
   pointer-events: none;
 }
-/* line 230, sass/screen.scss */
+/* line 231, sass/screen.scss */
 .anEvent .avatar {
   -webkit-transition: all .2s ease-in-out;
   -moz-transition: all .2s ease-in-out;
@@ -12800,27 +12801,27 @@ body {
   padding-right: 0;
 }
 @media (min-width: 768px) {
-  /* line 230, sass/screen.scss */
+  /* line 231, sass/screen.scss */
   .anEvent .avatar {
     max-width: none;
     padding-right: 20px;
   }
 }
-/* line 241, sass/screen.scss */
+/* line 242, sass/screen.scss */
 .anEvent .avatar .captionContainer {
   position: relative;
   overflow: hidden;
 }
-/* line 245, sass/screen.scss */
+/* line 246, sass/screen.scss */
 .anEvent .avatar .captionContainer:hover > .caption {
   bottom: 0;
   left: 0;
 }
-/* line 251, sass/screen.scss */
+/* line 252, sass/screen.scss */
 .anEvent .avatar img {
   width: 100%;
 }
-/* line 256, sass/screen.scss */
+/* line 257, sass/screen.scss */
 .anEvent .moreInfo {
   width: 100%;
   float: left;
@@ -12828,18 +12829,18 @@ body {
   color: black;
   display: none;
 }
-/* line 263, sass/screen.scss */
+/* line 264, sass/screen.scss */
 .anEvent .tickets {
   margin-top: 0px;
 }
-/* line 265, sass/screen.scss */
+/* line 266, sass/screen.scss */
 .anEvent .tickets h3 {
   font-size: 13px;
   font-weight: 700;
   margin-top: 0px;
 }
 @media (min-width: 768px) {
-  /* line 265, sass/screen.scss */
+  /* line 266, sass/screen.scss */
   .anEvent .tickets h3 {
     margin-top: 5px;
     font-size: 18px;
@@ -12847,21 +12848,21 @@ body {
   }
 }
 @media (min-width: 992px) {
-  /* line 265, sass/screen.scss */
+  /* line 266, sass/screen.scss */
   .anEvent .tickets h3 {
     font-size: 22px;
   }
 }
-/* line 278, sass/screen.scss */
+/* line 279, sass/screen.scss */
 .anEvent .tickets .concert_timeing {
   display: none;
 }
-/* line 281, sass/screen.scss */
+/* line 282, sass/screen.scss */
 .anEvent .tickets a {
   right: 15px;
   bottom: 0;
 }
-/* line 285, sass/screen.scss */
+/* line 286, sass/screen.scss */
 .anEvent .tickets a .btn {
   margin-top: 10px;
   background: #f50;
@@ -12872,32 +12873,32 @@ body {
   text-transform: uppercase;
 }
 @media (min-width: 768px) {
-  /* line 285, sass/screen.scss */
+  /* line 286, sass/screen.scss */
   .anEvent .tickets a .btn {
     font-size: 12px;
   }
 }
 @media (min-width: 768px) {
-  /* line 281, sass/screen.scss */
+  /* line 282, sass/screen.scss */
   .anEvent .tickets a {
     position: static;
   }
 }
-/* line 302, sass/screen.scss */
+/* line 303, sass/screen.scss */
 .anEvent .info {
   -webkit-transition: all .2s ease-in-out;
   -moz-transition: all .2s ease-in-out;
   -o-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
 }
-/* line 308, sass/screen.scss */
+/* line 309, sass/screen.scss */
 .anEvent .who {
   -webkit-transition: all .3s ease-in-out;
   -moz-transition: all .3s ease-in-out;
   -o-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
 }
-/* line 314, sass/screen.scss */
+/* line 315, sass/screen.scss */
 .anEvent .bigList {
   height: 0;
   -webkit-transition: all .3s ease-in-out;
@@ -12906,49 +12907,49 @@ body {
   transition: all .3s ease-in-out;
   opacity: 0;
 }
-/* line 324, sass/screen.scss */
+/* line 325, sass/screen.scss */
 .anEvent .big h1 {
   font-size: 33px;
 }
-/* line 327, sass/screen.scss */
+/* line 328, sass/screen.scss */
 .anEvent .big h2 {
   font-size: 18px;
   margin-top: 5px;
   margin-bottom: 5px;
 }
-/* line 332, sass/screen.scss */
+/* line 333, sass/screen.scss */
 .anEvent .big .captionContainer {
   position: relative;
   overflow: hidden;
 }
-/* line 336, sass/screen.scss */
+/* line 337, sass/screen.scss */
 .anEvent .big .captionContainer:hover > .caption {
   bottom: -30px;
   left: 0;
 }
-/* line 342, sass/screen.scss */
+/* line 343, sass/screen.scss */
 .anEvent .big .avatar {
   width: 33.33333333%;
 }
-/* line 348, sass/screen.scss */
+/* line 349, sass/screen.scss */
 .anEvent .big .bigList {
   opacity: 1;
   height: auto;
 }
-/* line 355, sass/screen.scss */
+/* line 356, sass/screen.scss */
 .anEvent .big .tickets h3 {
   margin-top: 8px;
 }
-/* line 359, sass/screen.scss */
+/* line 360, sass/screen.scss */
 .anEvent .big .bigList {
   display: block;
   margin-top: 35px;
 }
-/* line 362, sass/screen.scss */
+/* line 363, sass/screen.scss */
 .anEvent .big .bigList h4 {
   font-size: 18px;
 }
-/* line 367, sass/screen.scss */
+/* line 368, sass/screen.scss */
 .anEvent .type {
   position: absolute;
   top: 0;
@@ -12958,7 +12959,7 @@ body {
   background: #ff5500;
   border-bottom: 0px solid #bfbfbf;
 }
-/* line 375, sass/screen.scss */
+/* line 376, sass/screen.scss */
 .anEvent .type p {
   color: white;
   position: absolute;
@@ -12970,18 +12971,18 @@ body {
   top: 49px;
   text-transform: uppercase;
 }
-/* line 386, sass/screen.scss */
+/* line 387, sass/screen.scss */
 .anEvent .type.festival {
   background: blue;
   background: #b33c00;
 }
-/* line 391, sass/screen.scss */
+/* line 392, sass/screen.scss */
 .anEvent .expandedContent {
   position: relative;
   margin-top: 15px;
   margin-bottom: 15px;
 }
-/* line 395, sass/screen.scss */
+/* line 396, sass/screen.scss */
 .anEvent .expandedContent h4 {
   font-size: 20px;
   font-weight: 700;
@@ -12990,18 +12991,18 @@ body {
   margin-bottom: 5px;
 }
 
-/* line 404, sass/screen.scss */
+/* line 405, sass/screen.scss */
 .filters {
   padding-top: 33px;
 }
-/* line 406, sass/screen.scss */
+/* line 407, sass/screen.scss */
 .filters h2 {
   font-size: 16px;
   margin-top: 0;
   padding-top: 0;
 }
 
-/* line 412, sass/screen.scss */
+/* line 413, sass/screen.scss */
 .none {
   display: none;
   padding: 100px 0;
@@ -13009,7 +13010,7 @@ body {
   font-size: 30px;
 }
 
-/* line 420, sass/screen.scss */
+/* line 421, sass/screen.scss */
 .loading {
   opacity: 1;
   transition: opacity .5s ease-in-out;
@@ -13022,7 +13023,7 @@ body {
   z-index: 999;
   text-align: center;
 }
-/* line 432, sass/screen.scss */
+/* line 433, sass/screen.scss */
 .loading .loadingCopy {
   position: absolute;
   top: 50%;
@@ -13030,14 +13031,14 @@ body {
   width: 100%;
   display: none;
 }
-/* line 439, sass/screen.scss */
+/* line 440, sass/screen.scss */
 .loading .btn {
   margin: 0 auto;
   text-align: center;
   margin-top: 25px;
   font-size: 30px;
 }
-/* line 445, sass/screen.scss */
+/* line 446, sass/screen.scss */
 .loading h1 {
   margin-top: 150px;
   text-align: center;
@@ -13082,22 +13083,22 @@ body {
     border-width: 30px;
   }
 }
-/* line 489, sass/screen.scss */
+/* line 490, sass/screen.scss */
 .green-100 {
   background-color: #88b257;
 }
 
-/* line 492, sass/screen.scss */
+/* line 493, sass/screen.scss */
 .green-200 {
   background-color: #7da84d;
 }
 
-/* line 495, sass/screen.scss */
+/* line 496, sass/screen.scss */
 .animation {
   display: none;
 }
 
-/* line 498, sass/screen.scss */
+/* line 499, sass/screen.scss */
 .cube {
   position: absolute;
   bottom: 50%;
@@ -13108,12 +13109,12 @@ body {
   margin-top: 0;
 }
 
-/* line 507, sass/screen.scss */
+/* line 508, sass/screen.scss */
 .cube-2d {
   background-color: white;
 }
 
-/* line 510, sass/screen.scss */
+/* line 511, sass/screen.scss */
 .arc {
   position: absolute;
   top: 30%;
@@ -13124,7 +13125,7 @@ body {
   overflow: hidden;
 }
 
-/* line 519, sass/screen.scss */
+/* line 520, sass/screen.scss */
 .arc-cube {
   position: absolute;
   bottom: -70px;
