--- a/assets/styles/sass/screen.scss
+++ b/assets/styles/sass/screen.scss
@@ -138,6 +138,7 @@ body {
 		font-weight: 700;
 		margin-top: 10px;
 		margin-right: 20px;
+		margin-left: 10px;
 		display: inline-block;
 		float: left;
 		color: white;
